syntax = "proto3";
package amp.amp.v1;

import "amino/amino.proto";
import "amp/amp/v1/params.proto";
import "amp/amp/v1/market.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "amp/x/amp/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/amp/amp/v1/params";
  }

  // Listing queries a single listing by ID.
  rpc Listing(QueryListingRequest) returns (QueryListingResponse) {
    option (google.api.http).get = "/amp/amp/v1/listings/{id}";
  }

  // Listings queries all listings.
  rpc Listings(QueryListingsRequest) returns (QueryListingsResponse) {
    option (google.api.http).get = "/amp/amp/v1/listings";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryListingRequest { uint64 id = 1; }

message QueryListingResponse { Listing listing = 1; }

message QueryListingsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListingsResponse {
  repeated Listing listings = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
